tdf#166268 Initialize the correct null date in ImpSvNumberformatScan

When forcibly recalculating the document from the bug report, multiple threads
are spawned, each initializing its own SvNFLanguageData object from an already
existing one.

When initializing an SvNFLanguageData object from another one, the associated
null date (maNullDate) is not passed to the newly created
ImpSvNumberformatScan object, resulting in it always initializing with the
default null date of 30/12/1899 in worker threads.
However, the document has a base date set to 01/01/1904, causing displayed
dates to appear from 1904, while functions like =YEAR() calculate dates
based on 1899. This leads to a 4-year difference between displayed dates and
the results of date functions.

This commit updates the ImpSvNumberformatScan constructor to pass the original
object's null date during initialization, while retaining 30/12/1899 as the
default for cases where no explicit null date is provided.

Regression from: b38974391e8d4bf0d450abfaa86bbccbe1022995
(Related: tdf#160056 do calc NumberFormatting via ScInterpreterContext)

Change-Id: I7b622717f2c245dccef22897c1a2cc88daf60ff6
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/184687
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Tested-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Tested-by: Jenkins
(cherry picked from commit 234cb2da3598837a60572dc8475bcb7d9503335f)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/184840